fixed link clickability behind stretched link

--- a/resources/scss/ceres/views/Templates/CategoryListItem/_category-list-item.scss
+++ b/resources/scss/ceres/views/Templates/CategoryListItem/_category-list-item.scss
@@ -84,6 +84,10 @@
         .btn {
             z-index: 1;
         }
+
+        .vat a {
+            z-index: 1;
+        }
     }
 
     .price {
